--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -1,2 +1,7 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25.614035087719%;
+
+// Footer
+$footer__top_padding: 40px;
+$footer__side_padding: 40px;
+$footer__top_margin: 30px;
