--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -115,15 +115,37 @@
 	.search-toggle {
 		background: transparent;
 		border: none;
-		line-height: 60px; 
+		line-height: 60px;
 		outline: none;
 		padding: 0;
 
 		.open {
 			display: block;
+
+			.svg-icon-search {
+				height: 20px;
+				width: 20px;
+				position: relative;
+				top: 5px;
+
+				path {
+					fill: $color__text-main;
+				}
+			}
 		}
 		.close {
 			display: none;
+
+			.svg-icon-close {
+				height: 18px;
+				width: 20px;
+				position: relative;
+				top: 5px;
+
+				path {
+					fill: $color__text-main;
+				}
+			}
 		}
 
 		&.close-search {
@@ -281,10 +303,10 @@
 		padding: 1em 0;
 		text-align: left;
 		width: 50%;
-		
+
 		span {
-			margin-right: .2em; 
-		}				
+			margin-right: .2em;
+		}
 	}
 
 	.nav-next {
@@ -292,10 +314,10 @@
 		padding: 1em 0;
 		text-align: right;
 		width: 50%;
-		
+
 		span {
-			margin-left: .2em; 
-		}		
+			margin-left: .2em;
+		}
 	}
 
 	a {
@@ -304,10 +326,10 @@
 		padding: 1em 1.923em;
 		text-decoration: none;
 		text-transform: uppercase;
-		@include transition(0.3s);		
-		
+		@include transition(0.3s);
+
 		&:hover {
-			border-color: $color__link; 
+			border-color: $color__link;
 			color: $color__link;
 		}
 	}
@@ -317,15 +339,15 @@
 .posts-navigation .nav-links {
 	@include font-size(0.8666);
 	font-family: $font__details !important;
-	letter-spacing: .1em; 
-	
+	letter-spacing: .1em;
+
 	.nav-previous span {
-		margin-right: .5em; 
+		margin-right: .5em;
 	}
 
 	.nav-next span {
-		margin-left: .5em; 
-	}	
+		margin-left: .5em;
+	}
 }
 
 // Single post navigation.
@@ -334,13 +356,13 @@
 	border-bottom: 2px solid $color__background-hr-dark;
 	font-family: $font__main;
 	@include font-size(1.0666)
-	font-weight: 600;  
+	font-weight: 600;
 	padding: 4em 0;
 
 	a {
 		border: none;
 		color: $color__text-medium;
-		font-weight: 600; 
+		font-weight: 600;
 		padding: 0;
 		text-decoration: none;
 		text-transform: none;
