Refactor layout CSS
Refactored layout CSS to move the top and bottom padding from `site-content` to the header and footer.

--- a/sass/modules/_widgets.scss
+++ b/sass/modules/_widgets.scss
@@ -4,6 +4,7 @@
 	.widget-title {
 		color: $color__text-medium;
 		@include font-size(0.8666);
+		line-height: normal;
 		margin: 0 0 1.6em;
 		text-transform: uppercase;
 	}
