--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -1,9 +1,10 @@
 #colophon {
 	border-top: 1px solid $color__background-hr-dark;
+	margin-top: 80px; 
 
 	.widgets {
 		@include clearfix();
-		padding: 5em 0;
+		padding: 5.3333em 0;
 		
 		@for $i from 1 through 10 {
 			$margin: ($i - 1) * 2.5;
@@ -50,6 +51,7 @@
 
 		.container {
 			max-width: none;
+			padding: 0 40px;
 		}
 	}
 }
