--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -1,6 +1,9 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25.614035087719%;
 
+// Masthead
+$masthead__bottom_margin: 80px;
+
 // Footer
 $footer__top_padding: 80px;
 $footer__side_padding: 40px;
