--- a/style.css
+++ b/style.css
@@ -1463,6 +1463,9 @@ a {
   .archive-entry:last-of-type {
     margin-bottom: 5.5em; }
 
+.page-header {
+  margin-bottom: 80px; }
+
 /*--------------------------------------------------------------
 ## Pages
 --------------------------------------------------------------*/
