Updated settings custom CSS. Updated settings framework.

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -363,7 +363,7 @@
 	border-top: 2px solid $color__background-hr-dark;
 	border-bottom: 2px solid $color__background-hr-dark;
 	font-family: $font__main;
-	@include font-size(1.0666)
+	@include font-size(1.0666);
 	font-weight: 600;
 	padding: 4em 0;
 
