--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -1,6 +1,6 @@
 #masthead {
 	border-bottom: 1px solid $color__background-hr-dark;
-	margin-bottom: $masthead__bottom_margin;
+	margin-bottom: $masthead__bottom-margin;
 
 	.top-bar {
 		background: #fff;
