--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -157,7 +157,7 @@
 
 	.container > .page-header {
 		border-bottom: 2px solid $color__background-hr;
-		margin-bottom: $masthead__bottom_margin;
+		margin-bottom: $masthead__bottom-margin;
 		padding-bottom: 4em;
 
 		.page-title {
@@ -193,7 +193,7 @@
 }
 
 .page-header {
-	margin-bottom: $masthead__bottom_margin;
+	margin-bottom: $masthead__bottom-margin;
 }
 
 /*--------------------------------------------------------------
