--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -188,8 +188,8 @@
 	outline: none;
 
 	.svg-icon-menu {
-		position: relative;
 		bottom: 16px;
+		position: relative;
 
 		path {
 			fill: $color__text-main;
@@ -214,56 +214,56 @@
 }
 
 #mobile-navigation {
-	position: absolute;
 	left: 0;
+	position: absolute;
 	top: 60px;
 	width: 100%;
 	z-index: 10;
 
 	ul {
-		margin: 0;
 		list-style: none;
+		margin: 0;
 		padding: 0;
 
 		li {
-			line-height: 42px;
 			background: #f8f8f8;
-			width: 100%;
+			line-height: 42px;
 			position: relative;
+			width: 100%;
 
 			a {
-				display: block;
-				text-decoration: none;
-				color: $color__text-medium;
-				padding: 15px 0 15px 20px;
 				border-bottom: 1px solid #ebebeb;
-				width: 100%;
+				color: $color__text-medium;
+				display: block;
 				font-size: 12px;
 				line-height: 12px;
+				padding: 15px 0 15px 20px;
+				text-decoration: none;
 				text-transform: uppercase;
+				width: 100%;
 			}
 
 			&.menu-item-has-children > a {
-				padding-right: 48px;
 				max-width: 100%;
+				padding-right: 48px;
 			}
 
 			.dropdown-toggle {
 				background: transparent;
 				border: 0;
+				box-shadow: none;
 				content: "Open";
 				height: 30px;
 				padding: 6px;
 				position: absolute;
-				top: 5px;
 				right: 5px;
-				width: 42px;
+				top: 5px;
 				outline: none;
-				box-shadow: none;
+				width: 42px;
 
 				.svg-icon-submenu {
-					width: 10px;
 					height: 10px;
+					width: 10px;
 
 					path {
 						fill: $color__text-medium;
@@ -273,17 +273,17 @@
 		}
 
 		ul {
+			display: none;
 			margin: 0;
 			padding: 0;
-			display: none;
 
 			li {
+				background: #fff;
 				padding-left: 20px;
-				background: #ffffff;
 
 				a {
-					width: 100%;
 					text-transform: uppercase;
+					width: 100%;
 				}
 
 				ul {
