--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -10,7 +10,7 @@ i {
 }
 
 blockquote {
-	border-left: 3px solid $color__link;
+	border-left: 3px solid $color__primary-accent;
 	font-style: italic;
 	margin: 0 0 2.25em; 
 	padding: .5em 0 .55em 1.3333em;
