Put body background color variable back

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-	background: #fff; /* Fallback for when there is no custom background color defined. */
+	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
 }
 
 blockquote, q {
