--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -15,7 +15,7 @@
 	}
 	
 	h3 {
-		color: $color__text-main;
+		color: $color__text-medium;
 		font-family: $font__details;
 		@include font-size(1.0666);
 		font-weight: 400;
