--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -45,7 +45,7 @@ var {
 
 abbr, 
 acronym {
-	border-bottom: 1px dotted $color__border-abbr;
+	border-bottom: 1px dotted $color__text-medium;
 	cursor: help;
 }
 
