--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -7,7 +7,7 @@ button,
 input,
 select,
 textarea {
-	color: $color__text-main;
+	color: $color__text-medium;
 	font-family: $font__main;
 	font-size: 15px;
 	font-size: 1em;
