--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -1,10 +1,11 @@
+// Containers.
 $size__site-main: 100%;
 $size__site-sidebar: 25.614035087719%;
 
-// Masthead
+// Masthead.
 $masthead__bottom-margin: 80px;
 
-// Footer
+// Footer.
 $footer__top-padding: 80px;
 $footer__side-padding: 40px;
 $footer__top-margin: 80px;
