--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -14,17 +14,17 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: $color__text-input;
-	border: 1px solid $color__border-input;
+	color: $color__text-meta;
+	border: 1px solid $color__background-hr-dark;
 
 	&:focus {
-		color: $color__text-input-focus;
+		color: $color__text-medium;
 		outline: none; 
 	}
 }
 
 select {
-	border: 1px solid $color__border-input;
+	border: 1px solid $color__background-hr-dark;
 	max-width: 100%;
 }
 
