--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -129,7 +129,7 @@
 				top: 5px;
 
 				path {
-					fill: $color__text-main;
+					fill: $color__text-medium;
 				}
 			}
 		}
@@ -143,7 +143,7 @@
 				top: 5px;
 
 				path {
-					fill: $color__text-main;
+					fill: $color__text-medium;
 				}
 			}
 		}
@@ -192,7 +192,7 @@
 		position: relative;
 
 		path {
-			fill: $color__text-main;
+			fill: $color__text-medium;
 		}
 	}
 }
