--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -65,7 +65,7 @@
 				text-decoration: none;
 				
 				&:hover {
-					color: $color__text-main;
+					color: $color__text-medium;
 				}
 			}
 		}
@@ -180,7 +180,7 @@
 		margin: .66em 0 2.25em;
 		
 		a {
-			color: $color__text-main;
+			color: $color__text-medium;
 			text-decoration: none;
 			
 			&:hover {
