--- a/sass/woocommerce/_elements.scss
+++ b/sass/woocommerce/_elements.scss
@@ -12,7 +12,7 @@
 			-moz-appearance: textfield;
 			border-color: $color__text-meta;
 			border-width: 1px;
-			color: $color__text-main;
+			color: $color__text-medium;
 
 			&::-webkit-inner-spin-button,
 			&::-webkit-outer-spin-button {
