--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -11,8 +11,9 @@ $color__background-hr-dark: #ebebeb;
 // Buttons.
 $color__border-button: #ebebeb;
 
-// Primary accent color.
+// Accent colors.
 $color__primary-accent: #24c48a;
+$color__primary-accent-dark: #00a76a;
 
 // Text colors.
 $color__text-meta: #adadad;
