--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -11,6 +11,7 @@ i {
 
 blockquote {
 	border-left: 3px solid $color__primary-accent;
+	color: lighten( #636363, 12% );
 	font-style: italic;
 	margin: 0 0 2.25em; 
 	padding: .5em 0 .55em 1.3333em;
